--- a/VidhayakApp.Web/Views/User/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/User/Dashboard.cshtml
@@ -10,29 +10,78 @@
     <h1>  DashBoard </h1>
 </p>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card h-100">
+                <div class="card">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4C5LKrxdPhVgZ95bMEVoAPThdrvFUk21Z5A&usqp=CAU" class="card-img-top" alt="Suggestion">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a asp-action="Suggession" asp-controller="Suggession" class="btn btn-primary">Suggestion</a>
+                    </div>
+                </div>
+            </div>
+            </div>
+
+
+            <div class="col-md-4">
+                <div class="card h-100">
+                <div class="card">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJUTMvyprcMC9-SurniKNWeAFYt2nhu_49e1TICuRYtRq9PjSSQKvoBQN0GGBdvzixxtA&usqp=CAU" class="card-img-top" alt="Complaint">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a asp-action="Complaint" asp-controller="Complaint" class="btn btn-primary">Complaint</a>
+                    </div>
+                </div>
+            </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card h-100">
+                <div class="card">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShVVlVTpm-e5mmnB5ZFs9pc_r74BVpoXeCtw&usqp=CAU" class="card-img-top" alt="Demand">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a  asp-action="Demand" asp-controller="Demand"  class="btn btn-primary">Demand</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <!--
+
     <div class="card text-bg-dark">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4C5LKrxdPhVgZ95bMEVoAPThdrvFUk21Z5A&usqp=CAU" class="card-img img-size" alt="...">
+        <img src="" class="card-img img-size" alt="...">
+        <a asp-action="Demand" asp-controller="Demand"></a>
         <div class="card-img-overlay">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
             <p class="card-text"><small></small></p>
+        </div>
+    </div>
+    
+    <div class="card text-bg-dark">
+        <img src="" class="card-img img-size" alt="...">
+        <div class="card-img-overlay">
+            <a asp-action="Complaint" asp-controller="Complaint"></a>
+            <h5 class="card-title"></h5>
+            
         </div>
     </div>
 
     <div class="card text-bg-dark">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJUTMvyprcMC9-SurniKNWeAFYt2nhu_49e1TICuRYtRq9PjSSQKvoBQN0GGBdvzixxtA&usqp=CAU" class="card-img img-size" alt="...">
+        <img src="" class="card-img img-size" alt="...">
         <div class="card-img-overlay">
+            <a asp-action="Suggession" asp-controller="Suggession"></a>
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
             <p class="card-text"><small></small></p>
         </div>
     </div>
-
-    <div class="card text-bg-dark">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShVVlVTpm-e5mmnB5ZFs9pc_r74BVpoXeCtw&usqp=CAU" class="card-img img-size" alt="...">
-        <div class="card-img-overlay">
-            <h5 class="card-title"></h5>
-            <p class="card-text"></p>
-            <p class="card-text"><small></small></p>
-        </div>
-    </div>
+    -->
