multi-forms for storing user data

--- a/VidhayakApp.Web/Views/User/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/User/Dashboard.cshtml
@@ -19,7 +19,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a asp-action="Form" asp-controller="Form" class="btn btn-primary">Suggestion</a>
+                            <a asp-action="Form" asp-controller="Form"  class="btn btn-primary radioSelection1">Suggestion</a>
                     </div>
                 </div>
             </div>
@@ -33,7 +33,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a asp-action="Form" asp-controller="Form" class="btn btn-primary">Complaint</a>
+                            <a asp-action="Form" asp-controller="Form" class="btn btn-primary radioSelection2">Complaint</a>
                     </div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a  asp-action="Form" asp-controller="Form"  class="btn btn-primary">Demand</a>
+                            <a asp-action="Form" asp-controller="Form" class="btn btn-primary radioSelection3">Demand</a>
                     </div>
                 </div>
             </div>
