--- a/VidhayakApp.Web/Views/Shared/_Layout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_Layout.cshtml
@@ -393,6 +393,7 @@
     <script src="~/Frontend/plugins/sparklines/sparkline.js"></script>
 <!-- JQVMap -->
     <script src="~/Frontend/plugins/jqvmap/jquery.vmap.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/Frontend/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
 <!-- jQuery Knob Chart -->
     <script src="~/Frontend/plugins/jquery-knob/jquery.knob.min.js"></script>
