--- a/VidhayakApp.Web/Views/User/Dashboard1.cshtml
+++ b/VidhayakApp.Web/Views/User/Dashboard1.cshtml
@@ -1,13 +1,11 @@
-﻿ @using VidhayakApp.Web.ViewModels
+﻿@using VidhayakApp.Web.ViewModels
 @model LoginViewModel
 
 @{
-    
+    ViewData["ReturnUrl"] = "Dashboard";
 }
 
-
-
- <aside class="main-sidebar sidebar-dark-primary elevation-4">
+<aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="index3.html" class="brand-link">
         <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
@@ -25,7 +23,7 @@
 
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
 
-                @if (ViewData == null)
+                @if (TempData == null)
                 {
                     <!-- Display login and signup when user is not logged in -->
                     <div class="info" alt="Login">
@@ -40,7 +38,7 @@
                         <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block"> @ViewData["UserName"]</a>
+                        <a href="#" class="d-block"> @TempData["UserName"]</a>
                     </div>
                 }
             </div>
@@ -69,33 +67,9 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a asp-action="Profile" asp-controller="User" class="nav-link">
+                                <a href="./index.html" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>Profile</p>
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a asp-action="Complaint" asp-controller="User" class="nav-link">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>Complaint</p>
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a asp-action="Demand" asp-controller="User" class="nav-link">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>Demand</p>
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a asp-action="Profile" asp-controller="User" class="nav-link">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>Suggession</p>
+                                    <p>Dashboard v1</p>
                                 </a>
                             </li>
                         </ul>
@@ -103,9 +77,19 @@
             </nav>
 
 
-            @* <li class="sidebar-item selected">
+
+            <li class="sidebar-item selected">
+                <a class="sidebar-link waves-effect waves-dark sidebar-link active" href="" aria-expanded="false">
+                    <i class="mdi mdi-account-network"></i>
+                    <span class="hide-menu">Profile</span>
+                </a>
+            </li>
+
+
+
+            <li class="sidebar-item selected">
                 <a class="sidebar-link waves-effect waves-dark sidebar-link active" href="pages-profile.cshtml" aria-expanded="false"><i class="mdi mdi-account-network"></i><span class="hide-menu">Profile</span></a>
-            </li> *@
+            </li>
 
         </div>
 
@@ -115,7 +99,7 @@
 
     <ul id="sidebarnav" class="in">
         <li class="sidebar-item">
-            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="index.html" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu"> </span></a>
+            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="index.html" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">Dashboard</span></a>
         </li>
 
         <li class="sidebar-item">
@@ -136,7 +120,7 @@
     </ul>
 
 
-@*
+
 <p>
     <h1>  DashBoard </h1>
 </p>
@@ -215,4 +199,4 @@
             <p class="card-text"><small></small></p>
         </div>
     </div>
-    --> *@ 
+    -->
