--- a/VidhayakApp.Web/Views/User/_DashboardPartial.cshtml
+++ b/VidhayakApp.Web/Views/User/_DashboardPartial.cshtml
@@ -25,24 +25,18 @@
 
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
 
-                @if (ViewData == null)
+                @if (ViewData["UserName"] != null)
                 {
                     <!-- Display login and signup when user is not logged in -->
-                    <div class="info" alt="Login">
-                        <a asp-action="Login" asp-controller="Account" href="/login" class="d-block">Login</a>
-                        <a asp-action="Register" asp-controller="Account" href="/signup" class="d-block">Signup</a>
-                    </div>
-                }
-                else
-                {
-                    <!-- Display user information when user is logged in -->
                     <div class="image">
                         <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
                         <a href="#" class="d-block"> @ViewData["UserName"]</a>
                     </div>
+                   
                 }
+
             </div>
 
             <div class="form-inline">
@@ -101,17 +95,65 @@
                         </ul>
                 </ul>
             </nav>
-
-
-            @* <li class="sidebar-item selected">
-                <a class="sidebar-link waves-effect waves-dark sidebar-link active" href="pages-profile.cshtml" aria-expanded="false"><i class="mdi mdi-account-network"></i><span class="hide-menu">Profile</span></a>
-            </li> *@
-
         </div>
 
     </aside>
 
-    -------------------------------------------
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th scope="col">Day</th>
+                            <th scope="col">Article Name</th>
+                            <th scope="col">Author</th>
+                            <th scope="col">Shares</th>
+                            <th scope="col">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Bootstrap 4 CDN and Starter Template</td>
+                            <td>Cristina</td>
+                            <td>2.846</td>
+                            <td>
+                                <button type="button" class="btn btn-primary"><i class="far fa-eye"></i></button>
+                                <button type="button" class="btn btn-success"><i class="fas fa-edit"></i></button>
+                                <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>Bootstrap Grid 4 Tutorial and Examples</td>
+                            <td>Cristina</td>
+                            <td>3.417</td>
+                            <td>
+                                <button type="button" class="btn btn-primary"><i class="far fa-eye"></i></button>
+                                <button type="button" class="btn btn-success"><i class="fas fa-edit"></i></button>
+                                <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>Bootstrap Flexbox Tutorial and Examples</td>
+                            <td>Cristina</td>
+                            <td>1.234</td>
+                            <td>
+                                <button type="button" class="btn btn-primary"><i class="far fa-eye"></i></button>
+                                <button type="button" class="btn btn-success"><i class="fas fa-edit"></i></button>
+                                <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+
+   @*  -------------------------------------------
 
     <ul id="sidebarnav" class="in">
         <li class="sidebar-item">
@@ -134,85 +176,6 @@
             <a href="https://www.wrappixel.com/templates/flexy-bootstrap-admin-template/" class="btn d-block w-100 btn-danger text-white" target="_blank">Upgrade to Pro</a>
         </li>
     </ul>
+ *@
 
-
-@*
-<p>
-    <h1>  DashBoard </h1>
-</p>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card h-100">
-                <div class="card">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4C5LKrxdPhVgZ95bMEVoAPThdrvFUk21Z5A&usqp=CAU" class="card-img-top" alt="Suggestion">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a asp-action="Form" asp-controller="Form"  class="btn btn-primary radioSelection1">Suggestion</a>
-                    </div>
-                </div>
-            </div>
-            </div>
-
-
-            <div class="col-md-4">
-                <div class="card h-100">
-                <div class="card">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJUTMvyprcMC9-SurniKNWeAFYt2nhu_49e1TICuRYtRq9PjSSQKvoBQN0GGBdvzixxtA&usqp=CAU" class="card-img-top" alt="Complaint">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a asp-action="Form" asp-controller="Form" class="btn btn-primary radioSelection2">Complaint</a>
-                    </div>
-                </div>
-            </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card h-100">
-                <div class="card">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShVVlVTpm-e5mmnB5ZFs9pc_r74BVpoXeCtw&usqp=CAU" class="card-img-top" alt="Demand">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a asp-action="Form" asp-controller="Form" class="btn btn-primary radioSelection3">Demand</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
-
-    <!--
-
-    <div class="card text-bg-dark">
-        <img src="" class="card-img img-size" alt="...">
-        <a asp-action="Demand" asp-controller="Demand"></a>
-        <div class="card-img-overlay">
-            <h5 class="card-title"></h5>
-            <p class="card-text"></p>
-            <p class="card-text"><small></small></p>
-        </div>
-    </div>
-    
-    <div class="card text-bg-dark">
-        <img src="" class="card-img img-size" alt="...">
-        <div class="card-img-overlay">
-            <a asp-action="Complaint" asp-controller="Complaint"></a>
-            <h5 class="card-title"></h5>
-            
-        </div>
-    </div>
-
-    <div class="card text-bg-dark">
-        <img src="" class="card-img img-size" alt="...">
-        <div class="card-img-overlay">
-            <a asp-action="Suggession" asp-controller="Suggession"></a>
-            <h5 class="card-title"></h5>
-            <p class="card-text"></p>
-            <p class="card-text"><small></small></p>
-        </div>
-    </div>
-    --> *@ 
+   
