--- a/VidhayakApp.Web/Views/Account/Login.cshtml
+++ b/VidhayakApp.Web/Views/Account/Login.cshtml
@@ -5,10 +5,11 @@
     ViewData["Title"] = "Login";
 }
 
-<body class="login-page" style="min-height: 495.6px;">
+<body class="login-page d-flex align-items-center" style="min-height: 495.6px;">
+    <div class="container">
     <div class="login-box">
         <div class="login-logo">
-            <a href="../../index2.html"><b>Admin</b>LTE</a>
+            <a href="../../index2.html"><b>Login</b></a>
         </div>
         <!-- /.login-logo -->
         <div class="card">
@@ -68,6 +69,7 @@
                 </p>
             </div>
             <!-- /.login-card-body -->
+        </div>
         </div>
     </div>
     <!-- /.login-box -->
