--- a/VidhayakApp.Web/Views/User/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/User/Dashboard.cshtml
@@ -79,7 +79,7 @@
                         </ul>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a asp-action="Demand" asp-controller="User" class="nav-link">
+                                <a asp-action="Suggession" asp-controller="User" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Demand</p>
                                 </a>
@@ -87,7 +87,7 @@
                         </ul>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a asp-action="Profile" asp-controller="User" class="nav-link">
+                                <a asp-action="Suggession" asp-controller="User" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Suggession</p>
                                 </a>
