--- a/VidhayakApp.Web/Views/Shared/_Layout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_Layout.cshtml
@@ -216,7 +216,7 @@
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Dashboard v1</li>
+              <li class="breadcrumb-item active">Dashboard </li>
             </ol>
           </div><!-- /.col -->
         </div><!-- /.row -->
@@ -227,7 +227,7 @@
     <!-- Main content -->
     <section class="content">
       <div class="container-fluid">
-          @RenderBody();
+          @RenderBody()
         
         <!-- /.row (main row) -->
       </div><!-- /.container-fluid -->
