--- a/VidhayakApp.Web/Views/User/Complaint.cshtml
+++ b/VidhayakApp.Web/Views/User/Complaint.cshtml
@@ -1,4 +1,9 @@
-﻿<div class="col-sm-6">
+﻿@{
+    ViewData["Title"] = "Complaint";
+    Layout = "~/Views/Shared/_UserLayout.cshtml";
+}
+
+<div class="col-sm-6">
 
 <div class="card card-danger">
     <div class="card-header">
