--- a/VidhayakApp.Web/Views/User/Demand.cshtml
+++ b/VidhayakApp.Web/Views/User/Demand.cshtml
@@ -1,4 +1,10 @@
-﻿<div class="col-sm-6">
+﻿@{
+    ViewData["Title"] = "Demand";
+    Layout = "~/Views/Shared/_UserLayout.cshtml";
+}
+
+
+<div class="col-sm-6">
 
     <div class="card card-danger">
         <div class="card-header">
