--- a/VidhayakApp.Web/Views/User/Suggession.cshtml
+++ b/VidhayakApp.Web/Views/User/Suggession.cshtml
@@ -1,8 +1,10 @@
-﻿<div class="col-md-6">
+﻿@{
+    ViewData["Title"] = "Sugession";
+    Layout = "~/Views/Shared/_UserLayout.cshtml";
+}
 
 
-
-    
+<div class="col-md-6">
 
     <div class="card card-secondary">
         <div class="card-header">
